--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "lowdb sample for 1.125",
   "main": "index.js",
   "scripts": {
-    
     "start": "node index.js"
   },
   "author": "",
   "license": "",
   "dependencies": {
     "cors": "^2.8.4",
+    "dotenv": "^16.3.1",
     "express": "^4.16.3",
     "lowdb": "^1.0.0",
     "mongodb": "^3.6.2"
